# Clion-Google-Test-Integration

./: LICENSE  README.md
Prueba/: CMakeLists.txt
Prueba/test/: main.cpp  test_example.cpp
